Arrumando cabeçalho, adicionando imagem da empresa e vídeo do jogo

--- a/Home.html
+++ b/Home.html
@@ -16,17 +16,19 @@
                 <nav>
                     <ul>
                         <li><a href="Home.html">Home</a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="">Empresa</a></li>
+                        <li><a href="">Fases</a></li>
+                        <li><a href="">Personagens</a></li>
+                        <li><a href="">Mecânicas</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
-        <main>
+        <img class="logo" src="/img/logo.jpg">
 
+        <main>
+            <iframe class="video" src="./Vídeo introdutivo.mp4"></iframe>
         </main>
     </body>
 </html>
