--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
+    <img class="fundo" src="/img/fundo.jpg" alt="">
+
     <head>
         <meta charset="UTF-8">
         <meta content="width=device-width">
@@ -29,6 +32,15 @@
 
         <main>
             <iframe class="video" src="./Vídeo introdutivo.mp4"></iframe>
+
+            <section>
+                
+            </section>
+
         </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
