--- a/Home.html
+++ b/Home.html
@@ -14,8 +14,6 @@
     <body>
         <header>
             <div class="cabecalho">
-                <h1></h1>
-
                 <nav>
                     <ul>
                         <li><a href="Home.html">Home</a></li>
@@ -28,16 +26,13 @@
             </div>
         </header>
 
-        <img class="logo" src="/img/logo.jpg">
+        <div class="conteudo">
+            <img class="logo" src="/img/logo.jpg">
 
-        <main>
-            <iframe class="video" src="./Vídeo introdutivo.mp4"></iframe>
-
-            <section>
-                
-            </section>
-
-        </main>
+            <main>
+                <iframe class="video" src="./Vídeo introdutivo.mp4"></iframe>
+            </main>
+        </div>
 
         <footer>
 
