--- a/Home.html
+++ b/Home.html
@@ -57,7 +57,9 @@
             Após serem convocados para resgatarem o rei, descobriram que não seria uma tarefa fácil, não somente pelos inimigos,<br> 
             mas também pelas terras que foram divididas e completamente modificadas, com diferentes terrenos e monstros.<br>
             Mas isso não irá para-los, a pergunta é, você está com eles para resgatar o rei e trazer “The Wild Kingdom” de volta ao que ao que era antes?
-            </p>    
+            </p>
+
+            <p>ODEIO NEGROS</p>
             </div>
         </div>
 
