--- a/Home.html
+++ b/Home.html
@@ -34,8 +34,9 @@
             </main>
         
 
-        <h1 >Sobre o jogo</h1><br>
+        <div class="title" >Sobre o jogo</h1><br>
         <br>
+        </div>
 
     <div class="text"></div>
         <p> Wild kingdom era um grande reino de paz, diversão, e magia. Mas um dia, os irmãos “Abddon Lyons” e “Anessa Lyons”,<br>
@@ -58,8 +59,6 @@
             mas também pelas terras que foram divididas e completamente modificadas, com diferentes terrenos e monstros.<br>
             Mas isso não irá para-los, a pergunta é, você está com eles para resgatar o rei e trazer “The Wild Kingdom” de volta ao que ao que era antes?
             </p>
-
-            <p>ODEIO NEGROS</p>
             </div>
         </div>
 
