--- a/Home.html
+++ b/Home.html
@@ -65,17 +65,19 @@
         </div>
 
         <footer>
-            <div class="rodape"
-            <form action="https://github.com/Anthony-UetaVecchia">
-                <input type="submit" value="github Anthony" /> 
-            </form>
-            <form action="https://github.com/fabioantunes2806">
-               <input type="submit" value="github Fábio" /> 
-            </form>
-            <form action="https://github.com/gabrielrics">
-                <input type="submit" value="github Gabriel" />
-            </form>
-                </div>
+            <div class="rodape">
+                <form action="https://github.com/Anthony-UetaVecchia">
+                    <input type="submit" value="github Anthony" /> 
+                </form>
+
+                <form action="https://github.com/fabioantunes2806">
+                    <input type="submit" value="github Fábio" /> 
+                </form>
+
+                <form action="https://github.com/gabrielrics">
+                    <input type="submit" value="github Gabriel" />
+                </form>
+            </div>
         </footer>
     </body>
 </html>
