terminando a página Home

--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <img class="fundo" src="/img/fundo.jpg" alt="">
 
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-16">
         <meta content="width=device-width">
         <title>TW2DGAMES The Journey</title>
 
@@ -71,17 +71,17 @@
                 <ul id="git">
                     <li>
                         <a href="https://github.com/Anthony-UetaVecchia">
-                            <i><img src="/img/logoGH.png"></i>
+                            <i class="fa-brands fa-instagram instagram"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://github.com/fabioantunes2806">
-                            <i><img src="/img/logoGH.png"></i>
+                            <i class="fa-brands fa-twitter twitter"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://github.com/gabrielrics">
-                            <i><img src="/img/logoGH.png"></i>
+                            <i class="fa-brands fa-whatsapp whatsapp"></i>
                         </a>
                     </li>
                 </ul>
