Finalizado os icons do GitHub

--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,9 @@
     <img class="fundo" src="/img/fundo.jpg" alt="">
 
     <head>
+
+        <script src="https://kit.fontawesome.com/f423d52d1f.js" crossorigin="anonymous"></script>
+
         <meta charset="UTF-16">
         <meta content="width=device-width">
         <title>TW2DGAMES The Journey</title>
@@ -71,17 +74,17 @@
                 <ul id="git">
                     <li>
                         <a href="https://github.com/Anthony-UetaVecchia">
-                            <i class="fa-brands fa-instagram instagram"></i>
+                            <i class="fa-brands fa-github github"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://github.com/fabioantunes2806">
-                            <i class="fa-brands fa-twitter twitter"></i>
+                            <i class="fa-brands fa-github github"></i>
                         </a>
                     </li>
                     <li>
                         <a href="https://github.com/gabrielrics">
-                            <i class="fa-brands fa-whatsapp whatsapp"></i>
+                            <i class="fa-brands fa-github github"></i>
                         </a>
                     </li>
                 </ul>
