--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul>
                         <li><a href="Home.html">Home</a></li>
-                        <li><a href="">Empresa</a></li>
+                        <li><a href="pag2.html">Empresa</a></li>
                         <li><a href="">Fases</a></li>
                         <li><a href="">Personagens</a></li>
                         <li><a href="">Mecânicas</a></li>
