--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
         </header>
 
         <div class="conteudo">
-            <img class="logo" src="/img/logo.jpg">
+            <img class="logo" src="/img/logo do jogo.JPG">
 
             <main>
                 <iframe class="video" src="./Vídeo introdutivo.mp4"></iframe>
