--- a/Home.html
+++ b/Home.html
@@ -14,14 +14,14 @@
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style-home.css">
     </head>
-    <body>
+    <body style="background-color:#00182c">
         <header>
             <div class="cabecalho">
                 <nav>
                     <ul>
                         <li><a href="Home.html">Home</a></li>
                         <li><a href="pag2.html">Empresa</a></li>
-                        <li><a href="">Fases</a></li>
+                        <li><a href="pag3.html">Fases</a></li>
                         <li><a href="">Personagens</a></li>
                         <li><a href="">Mecânicas</a></li>
                     </ul>
