--- a/pag4.html
+++ b/pag4.html
@@ -22,8 +22,8 @@
                         <li><a href="Home.html">Home</a></li>
                         <li><a href="pag2.html">Empresa</a></li>
                         <li><a href="pag3.html">Fases</a></li>
-                        <li><a href="">Personagens</a></li>
-                        <li><a href="">Mecânicas</a></li>
+                        <li><a href="pag4.html">Personagens</a></li>
+                        <li><a href="pag5.html">Mecânicas</a></li>
                     </ul>
                 </nav>
             </div>
