Adicionando nome às fases

--- a/pag3.html
+++ b/pag3.html
@@ -39,6 +39,10 @@
                     <h1 class="title">Fases</h1>
                     <br>
                     <br>
+                    <br>
+
+                    <h1 class="title">Turtle Island</h1>
+                    <br>
 
                     <img class="fases" src="/img/fase 1.jpg">
                     <br>
@@ -52,6 +56,9 @@
                         <br>
                         <br>
 
+                        <h1 class="title">Robotic Roads</h1>
+                        <br>
+
                         <img class="fases" src="/img/fase2.jpg">
                         <br>
 
@@ -61,6 +68,9 @@
                         </p>
                         <br>
                         <br>
+                        <br>
+
+                        <h1 class="title">Obscure Lavender</h1>
                         <br>
 
                         <img class="fases" src="/img/fase3.jpg">
