Arrumando os botões do git

--- a/Home.html
+++ b/Home.html
@@ -21,10 +21,10 @@
             <nav>
                 <ul>
                     <li><a href="Home.html">Home</a></li>
-                    <li><a href="pag2.html">Empresa</a></li>
-                    <li><a href="pag3.html">Fases</a></li>
-                    <li><a href="pag4.html">Personagens</a></li>
-                    <li><a href="pag5.html">Mecânicas</a></li>
+                    <li><a href="Empresa.html">Empresa</a></li>
+                    <li><a href="Fases.html">Fases</a></li>
+                    <li><a href="Personagens.html">Personagens</a></li>
+                    <li><a href="Mecânicas.html">Mecânicas</a></li>
                 </ul>
             </nav>
         </div>
@@ -86,20 +86,21 @@
 
     <footer>
         <section>
+            
             <ul>
                 <li>
                     <a href="https://github.com/Anthony-UetaVecchia">
-                        <i class="fa-brands fa-github github"></i>
+                        <i class="fa-brands fa-github" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/fabioantunes2806">
-                        <i class="fa-brands fa-github github"></i>
+                        <i class="fa-brands fa-github" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/gabrielrics">
-                        <i class="fa-brands fa-github github"></i>
+                        <i class="fa-brands fa-github" aria-hidden="true"></i>
                     </a>
                 </li>
             </ul>
