--- a/Mecânicas.html
+++ b/Mecânicas.html
@@ -21,10 +21,10 @@
             <nav>
                 <ul>
                     <li><a href="Home.html">Home</a></li>
-                    <li><a href="pag2.html">Empresa</a></li>
-                    <li><a href="pag3.html">Fases</a></li>
-                    <li><a href="pag4.html">Personagens</a></li>
-                    <li><a href="pag5.html">Mecânicas</a></li>
+                    <li><a href="Empresa.html">Empresa</a></li>
+                    <li><a href="Fases.html">Fases</a></li>
+                    <li><a href="Personagens.html">Personagens</a></li>
+                    <li><a href="Mecânicas.html">Mecânicas</a></li>
                 </ul>
             </nav>
         </div>
